# project-chimera

./: .coderabbit.yaml  .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
.claude/: rules.md
.continue/mcpServers/: new-mcp-server.yaml
.cursor/: mcp.json
.cursor/rules/:  agent.md
.github/workflows/: main.yml
research/: architecture_strategy.md  tooling_strategy.md
scripts/: validate_specs.py
skills/: README.md
skills/skill_content_generator/: README.md  __init__.py
skills/skill_transaction_executor/: README.md  __init__.py
skills/skill_trend_fetcher/: README.md  __init__.py
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
tests/: test_content_generator.py  test_skills_interface.py  test_transaction_executor.py  test_trend_fetcher.py
