[project]
name = "project-chimera"
version = "0.1.0"
description = "Project Chimera"
dependencies = [
  "pydantic",
  "redis",
  "weaviate-client",
  "coinbase-agentkit",
  "pytest",
]

[tool.uv]
python = "3.12"
[project]
name = "project-chimera"
version = "0.1.0"
description = "Project Chimera"
dependencies = [
  "pydantic",
  "redis",
  "weaviate-client",
  "coinbase-agentkit",
  "pytest",
]

[tool.uv]
python = "3.12"
pyproject.toml (For uv/Python env management)
toml[project]
name = "project-chimera"
version = "0.1.0"
dependencies = [
    "pydantic",
    "redis",
    "weaviate-client",
    "coinbase-agentkit",  # For Agentic Commerce
    "pytest",  # For testing
    # Add more as specs evolve (no installs beyond basics yet)
]

[tool.uv]
python = "3.12"[tool.poetry]
name = "project-chimera"
version = "0.1.0"
description = "Project Chimera"
authors = ["you <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
