# pyproject.toml - Project configuration for uv (fast Python package & venv manager)

[project]
name = "project-chimera"
version = "0.1.0"
description = "Autonomous Influencer Network - Project Chimera infrastructure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic",                # For strict data models/schemas
    "redis",                   # Task/Review queues + episodic cache
    "weaviate-client",         # Vector DB for semantic/long-term memory + RAG
    "coinbase-agentkit",       # Agentic Commerce - wallets & on-chain tx
    "pytest",                  # Testing framework

    # Add more later as implementation progresses (e.g. langchain, docker, etc.)
]

[tool.uv]
# uv-specific settings
python = "3.12"  # Preferred Python version for venv creation