[project]
name = "project-chimera"
version = "0.1.0"
description = "Autonomous Influencer Network - Project Chimera infrastructure"
readme = "README.md"
requires-python = ">=3.12"          # This constrains the project to Python 3.12+
dependencies = [
    "pydantic",
    "redis",
    "weaviate-client",
    "coinbase-agentkit",
    "pytest",
]

[tool.uv]
# Optional uv settings (add if needed later)
# python-preference = "only-system"